chore(BO+tenant) : fix duplicated apartment sharing link PARTNER when both roommates use dfc